# sqlprobe

./: CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  SQLPROBE_PHASE3_CONTEXT.md  pyproject.toml
assertions/: churn.yaml  date_handling.yaml  filters.yaml  revenue.yaml
cases/examples/: churn_rate_monthly.yaml  revenue_q1_enterprise.yaml
docs/: failure-modes.md
fixtures/: seed.sql  warehouse.db
schema/: annotations.yaml
scripts/: build_fixture_db.py
sqlprobe/adapters/: duckdb.py
sqlprobe/annotations/: prompt_builder.py
sqlprobe/cli/: main.py
sqlprobe/core/: case.py  result.py  taxonomy.py
sqlprobe/evaluators/: assertions.py  execution.py  judge.py  syntax.py
sqlprobe/loader/: annotation_loader.py  assertion_loader.py  case_loader.py
sqlprobe/regression/: baseline.py
tests/: test_annotation_loader.py  test_assertion_engine.py  test_cli.py  test_duckdb_adapter.py  test_execution_evaluator.py  test_integration.py  test_judge.py  test_package.py  test_result_assertions.py  test_stubs.py  test_syntax_evaluator.py
